--- a/gitian/descriptors/mac/gitian-utils.yml
+++ b/gitian/descriptors/mac/gitian-utils.yml
@@ -3,7 +3,7 @@ name: "utils-mac"
 suites:
 - "precise"
 architectures:
-- "i386"
+- "amd64"
 packages:
 - "git-core"
 - "unzip"
@@ -19,7 +19,7 @@ remotes:
   "dir": "libevent"
 files:
 - "apple-uni-sdk-10.6_20110407-0.flosoft1_i386.deb"
-- "multiarch-darwin11-cctools127.2-gcc42-5666.3-llvmgcc42-2336.1-Linux-120724.tar.xz"
+- "x86_64-apple-darwin10.tar.xz"
 - "openssl.tar.gz"
 - "gmp.tar.bz2"
 - "versions"
@@ -34,12 +34,17 @@ script: |
   umask 0022
 
   sudo dpkg -i *.deb
-  tar xaf multiarch-darwin*tar.xz
-  export PATH="$PATH:$HOME/build/apple-osx/bin/"
+
+  tar -xavf x86_64-apple-darwin10.tar.xz
+  # XXX: Needed for the otool patch. But we should replace that one with a
+  # better solution. See: comment 15 in
+  # https://bugzilla.mozilla.org/show_bug.cgi?id=936115
+  export PATH=$PATH:/home/ubuntu/build/x-tools/x86_64-apple-darwin10/bin
+
   # For OpenSSL
-  ln -s ~/build/apple-osx/bin/apple-osx-gcc ~/build/apple-osx/bin/i686-apple-darwin11-cc
+  #ln -s ~/build/apple-osx/bin/apple-osx-gcc ~/build/apple-osx/bin/i686-apple-darwin11-cc
   #For gmp, need to trick it so it knows we're doing a 64 bit build
-  for i in ~/build/apple-osx/bin/i686-apple-darwin11-*; do j=`echo $i | sed 's/i686/x86_64/'`; ln -s $i $j; done;
+  #for i in ~/build/apple-osx/bin/i686-apple-darwin11-*; do j=`echo $i | sed 's/i686/x86_64/'`; ln -s $i $j; done;
 
   # XXX Clean up these flags?
   export CFLAGS="-m64 -I/usr/lib/apple/SDKs/MacOSX10.6.sdk/usr/include/ -I/usr/lib/gcc/i686-apple-darwin10/4.2.1/include/ -I.  -L/usr/lib/apple/SDKs/MacOSX10.6.sdk/usr/lib/ -L/usr/lib/apple/SDKs/MacOSX10.6.sdk/usr/lib/system/ -mmacosx-version-min=10.5"
@@ -50,7 +55,7 @@ script: |
   cd libevent
   ./autogen.sh
   find -type f | xargs touch --date="$REFERENCE_DATETIME"
-  ./configure --disable-static --host=i686-apple-darwin11 --prefix=$INSTDIR/libevent
+  ./configure --disable-static --host=x86_64-apple-darwin10 --prefix=$INSTDIR/libevent
   make $MAKEOPTS
   make install
   cd ..
