This pulls the .so out for the Linux build

--- a/gitian/descriptors/linux/gitian-firefox.yml
+++ b/gitian/descriptors/linux/gitian-firefox.yml
@@ -128,6 +128,7 @@ script: |
   # files.
   export LD_PRELOAD="$INSTDIR/faketime/usr/local/lib/faketime/libfaketime.so.1"
   cp -a obj-*/dist/firefox/* $INSTDIR/Browser/
+  cp -a obj-*/memory/replace/ctalloc/libreplace_ctalloc.so $INSTDIR/Browser/
   # Remove firefox-bin (we don't use it, see ticket #10126)
   rm -f $INSTDIR/Browser/firefox-bin
   # TODO: There goes FIPS-140.. We could upload these somewhere unique and
